package proto;

/////////

message UserData
{
    optional uint32 uid = 1;    
    optional string name = 2;  
    optional uint32 imid = 3; 
    optional int32 sex = 4;  
    optional int32 role = 5;
    optional uint32 seat_num = 6;
    optional bool is_win = 7;
}


enum Result {
    OK = 0;
    FL = 1;
}

enum GameStatus {
    NotStarted = 0;
    Started = 1;
}
///

// 1
message C2SLogin {
    required uint32 uid = 1;
    required string token = 2;
    required uint32 channel = 3;
    required UserData user_info = 4;
}

// 1001
message S2CLoginRep {
    required Result ret = 1;
    required GameStatus status = 2;
}

// 2
message C2SStartGame {
    enum LuckyType {
      NilType = 0;
      SpeType = 1;
      SecType = 2;
      SufType = 3;
    }
    
    message SpecifyNum {
        repeated uint32 numbers = 1;
    }
    message SectionNum {
        required uint32 lower = 1;
        required uint32 upper = 2;
    }
    message SuffixNum {
        required int32 suffix = 1;
    }

    required LuckyType type = 1;
    optional SpecifyNum spe = 2;
    optional SectionNum sec = 3;
    optional SuffixNum  suf = 4;
}

// 1002
message S2CStartGameRep {
    required Result ret = 1;
}

// 2002
message S2CNotifyGameStart {
    required UserData user_info = 1;
}

// 3
message C2STug {
}

// 1003
message S2CTugRep {
    repeated UserData seat_list = 1;
}

// 4
message C2SStopGame {
}

// 1004
message S2CStopGameRep {
    required Result ret = 1;
}

// 2004
message S2CNotifyGameStop {
    required UserData user_info = 1;
}

// 2001
message S2CNotifyWinners {
    repeated UserData winner_list = 1;
}

